erDiagram
    DIARY_ENTRY {
        uuid id PK
        uuid user_id FK
        uuid practice_id FK
        enum type
        text content
        jsonb metadata
        boolean is_private
        timestamp created_at
        timestamp updated_at
    }
    
    DIARY_TAG {
        uuid id PK
        string name
        string color
        uuid user_id FK
    }
    
    USER ||--o{ DIARY_ENTRY : creates
    PRACTICE ||--o{ DIARY_ENTRY : linked_to
    DIARY_ENTRY }o--o{ DIARY_TAG : has
